src/test/deca/syntax/valid/resultats/test_include-lex.res
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.findFile(AbstractDecaLexer.java:173) - Using local file ./src/test/deca/syntax/valid/test_include_part1.incl
'{': [@0,0:0='{',<36>,1:0]
IDENT: [@1,3:5='int',<26>,2:1]
IDENT: [@2,7:7='x',<26>,2:5]
'=': [@3,9:9='=',<29>,2:7]
INT: [@4,11:11='5',<1>,2:9]
';': [@5,12:12=';',<39>,2:10]
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.nextToken(AbstractDecaLexer.java:263) - End of file, poping include stack
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.findFile(AbstractDecaLexer.java:173) - Using local file ./src/test/deca/syntax/valid/test_include_part2.incl
'println': [@6,1:7='println',<18>,1:1]
'(': [@7,8:8='(',<34>,1:8]
STRING: [@8,9:25='"Test Include : "',<47>,1:9]
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.nextToken(AbstractDecaLexer.java:263) - End of file, poping include stack
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.findFile(AbstractDecaLexer.java:173) - Using local file ./src/test/deca/syntax/valid/test_include_part3.incl
',': [@9,1:1=',',<33>,1:1]
IDENT: [@10,2:2='x',<26>,1:2]
')': [@11,3:3=')',<35>,1:3]
';': [@12,4:4=';',<39>,1:4]
'}': [@13,6:6='}',<37>,2:0]
DEBUG fr.ensimag.deca.syntax.AbstractDecaLexer.nextToken(AbstractDecaLexer.java:263) - End of file, poping include stack
