src/test/deca/syntax/invalid/resultats/test29_while-lex.res
'{': [@0,309:309='{',<36>,14:0]
'while': [@1,312:316='while',<25>,15:1]
'(': [@2,317:317='(',<34>,15:6]
')': [@3,318:318=')',<35>,15:7]
'{': [@4,319:319='{',<36>,15:8]
'}': [@5,322:322='}',<37>,16:1]
'println': [@6,327:333='println',<18>,18:1]
'(': [@7,334:334='(',<34>,18:8]
STRING: [@8,335:341='"Hello"',<47>,18:9]
')': [@9,342:342=')',<35>,18:16]
';': [@10,343:343=';',<39>,18:17]
'}': [@11,345:345='}',<37>,19:0]
